--- a/src/content/nyu.mdx
+++ b/src/content/nyu.mdx
@@ -1,22 +1,29 @@
 ---
 title: "Reinventing the public health paradigm with NYU"
 subtitle: "Winner of multiple W3 Awards including Best in Show; Gold for the University category"
-projectRole: "Designer"
+projectRole: "Designer, Front-end Developer, Content Strategist"
 links:
   - text: "NYU School of Global Public Health"
     url: "https://publichealth.nyu.edu/"
 ---
-import ScreenShot from '@/components/ui/screenshot'
-import nyuHome from '@/assets/images/projects/nyu-home.png'
-import nyuLP from '@/assets/images/projects/nyu-lp.png'
 
+import ScreenShot from "@/components/ui/screenshot";
+import nyuHome from "@/assets/images/projects/nyu-home.png";
+import nyuLP from "@/assets/images/projects/nyu-lp.png";
 
-<p className="lead">**In a pioneering project during a transformative period, the NYU School of Global Public Health (GPH) embarked on a mission to revolutionize its digital footprint.** This venture was a website redesign and a comprehensive reimagination of how their ethos and dynamism could be encapsulated and communicated online. The result was a digital platform showcasing the school's vibrant energy and multi-disciplinary approach, significantly enhancing the user experience.</p>
+<p className="lead">
+  **In a pioneering project during a transformative period, the NYU School of
+  Global Public Health (GPH) embarked on a mission to revolutionize its digital
+  footprint.** This venture was a website redesign and a comprehensive
+  reimagination of how their ethos and dynamism could be encapsulated and
+  communicated online. The result was a digital platform showcasing the school's
+  vibrant energy and multi-disciplinary approach, significantly enhancing the
+  user experience.
+</p>
 
 ## Project Highlights
 
 - **Client Satisfaction**: The project concluded with an exceptionally positive outcome, resulting in a platform that exceeded client expectations. NYU GPH's commitment to a bold visual and content strategy led to a distinct and impactful web presence, distinguishing it from other NYU schools.
-  
 - **Growth and Recognition**: Post-launch, GPH experienced remarkable growth, nearly doubling in size and securing a prestigious spot among the Top 20 Best Grad Schools in Public Health, as ranked by US News & World Report in 2023. The redesigned site was crucial in attracting high-caliber students and faculty, contributing to the college's rising prominence.
 
 - **Innovative Design and Strategy**: A component-driven design process underpinned the project's success, allowing for flexible content creation within a coherent system. Large, powerful images and bold typography became the hallmarks of GPH's new digital identity, supported by a steady stream of high-quality photography and video content.
@@ -37,7 +44,6 @@ GPH aimed to establish a digital identity mirroring its innovative spirit and co
 The project team, led by my keen focus on content and marketing, dove deep into the college's core values and aspirations. Through extensive collaboration and a month-long exploration of mood boards, a design strategy emerged that was as ambitious as it was meticulous. The website was rebuilt to emphasize GPH's dynamic nature, with a focus on:
 
 - **Component-Driven Design**: This approach enabled GPH to maintain a versatile yet unified system for content creation, ensuring a consistent and compelling online experience.
-  
 - **Bold Visual Language**: The commitment to a "big and bold" aesthetic was realized through striking imagery and typography, setting GPH apart from its peers.
 
 - **Engaging Content Strategy**: Leveraging their substantial collection of photography and ongoing content creation, GPH's digital presence was enriched with stories of student successes, live video events, and podcasts that resonated with prospective students and faculty alike.
