--- a/src/content/wti.mdx
+++ b/src/content/wti.mdx
@@ -1,17 +1,28 @@
 ---
 title: "Wu Tsai Institute design lost a Webby to Spotify"
 subtitle: "Connecting neuroscience and data science to accelerate breakthroughs in understanding cognition."
-projectRole: "Creative Director"
+projectRole: "Creative Director, Designer, Front-end Developer"
 links:
   - text: "Wu Tsai Institute at Yale University"
     url: "https://wti.yale.edu/"
 ---
-import ScreenShot from '@/components/ui/screenshot'
-import YouTubeEmbed from '@/components/ui/youtubeEmbed'
-import wtiProfile from '@/assets/images/projects/wti-profile.png'
-import wtiPrograms from '@/assets/images/projects/wti-programs.png'
 
-<p className="lead">**In a pioneering effort to match the ambitious goals of the Wu Tsai Institute at Yale, a newly established research hub dedicated to exploring the intricacies of the human brain, our task was to create an equally ambitious digital presence.** This project culminated in a state-of-the-art website that received critical acclaim and earned nominations for two prestigious Webbys: Best School/University Site and Best Mobile Visual Design - Aesthetic. Competing against heavyweights like Spotify's Wrapped, the recognition highlighted our innovative approach and the stunning visual identity we crafted for the institute.</p>
+import ScreenShot from "@/components/ui/screenshot";
+import YouTubeEmbed from "@/components/ui/youtubeEmbed";
+import wtiProfile from "@/assets/images/projects/wti-profile.png";
+import wtiPrograms from "@/assets/images/projects/wti-programs.png";
+
+<p className="lead">
+  **In a pioneering effort to match the ambitious goals of the Wu Tsai Institute
+  at Yale, a newly established research hub dedicated to exploring the
+  intricacies of the human brain, our task was to create an equally ambitious
+  digital presence.** This project culminated in a state-of-the-art website that
+  received critical acclaim and earned nominations for two prestigious Webbys:
+  Best School/University Site and Best Mobile Visual Design - Aesthetic.
+  Competing against heavyweights like Spotify's Wrapped, the recognition
+  highlighted our innovative approach and the stunning visual identity we
+  crafted for the institute.
+</p>
 
 ### Client Satisfaction
 
@@ -23,9 +34,9 @@ The client's satisfaction was paramount throughout the project, and their feedba
 
 Given the institute's focus on a "big bet" on brain research, they desired a website that was as monumental as their mission. For the project, we engaged a talented animator [Shira Inbar](https://shira-inbar.com/), previously noted for her work with the New York Times, to achieve this. This collaboration resulted in captivating animations adorning the homepage, setting a dynamic tone for the site and instantly engaging visitors.
 
-<YouTubeEmbed embedId="vUGi-sQBjI4"/>
-<br/>
-<YouTubeEmbed embedId="WwmYTUG2jDM"/>
+<YouTubeEmbed embedId="vUGi-sQBjI4" />
+<br />
+<YouTubeEmbed embedId="WwmYTUG2jDM" />
 
 ### Adapting to Challenges
 
